examples/test/testpolicy414.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy414
  namespace: namespace483
spec:
  podSelector:
    matchLabels:
      key11: value23
      key30: value31
      key7: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value7
      podSelector:
        matchLabels:
          key10: value2
          key40: value36
          key16: value37
